--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -54,18 +54,17 @@
         left: 0;
         right: 20px;
         top: 0;
-        padding: 30px 32px;
-        // padding-top: 49px;
+        padding: 16px 32px;
         margin-right: 20px;
         opacity: 1;
-        width: 80%;
+        width: 85%;
         max-width: 1180px;
     }
     .cases {
         overflow-y: auto;
         max-height: calc(100vh - 250px);
         width: 100%;
-        padding-top: 96px;
+        padding-top: 62px;
         padding-bottom: 90px;
         height: 100%;
         .load-more {
@@ -87,8 +86,10 @@
         overflow-y: auto;
         max-height: calc(100vh - 62px);
         margin-top: 20px;
-        padding-right: 30px;
-        max-width: 360px;
+        margin-right: 30px;
+        padding-right: 15px;
+        width: 20%;
+        max-width: 320px;
         padding-bottom: 30px;
         .link {
             font-size: 16px;
@@ -163,14 +164,15 @@
 
     .case {
         &.short {
+            width: 32%;
             margin: 8px 8px;
             border: 1px solid rgba(0, 0, 0, 0.12);
-            padding:16px;
-            .short-icon{
-                margin-top: -6px !important;
-                margin-bottom: -16px !important;
+            padding: 16px;
+            .short-icon {
+                margin-top: -22px !important;
+                margin-bottom: -22px !important;
                 margin-right: -12px;
-                svg{
+                svg {
                     font-size: 24px !important;
                 }
             }
@@ -183,12 +185,18 @@
                 -webkit-line-clamp: 1; /* number of lines to show */
                 -webkit-box-orient: vertical;
             }
+            .plus-text,
             .description,
-            .subtitle{
+            .subtitle {
                 font-size: 14px;
                 line-height: 19px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1; /* number of lines to show */
+                -webkit-box-orient: vertical;
             }
-            
+
             .additional-procedure,
             .case-tag .display {
                 display: none;
@@ -201,9 +209,9 @@
             box-shadow: 1px 1px 6px grey;
             -webkit-transition: box-shadow 0.1s ease-in;
             .case-header .save-toggle.not-saved {
-                opacity: .6 ;
+                opacity: 0.6;
                 height: auto;
-                &:hover{
+                &:hover {
                     opacity: 1;
                 }
             }
@@ -211,9 +219,9 @@
         cursor: pointer;
         margin: 8px 8px;
         margin-right: 26px;
-        padding: 24px;
+        padding: 18px 24px;
         border-radius: 8px;
-        width: 80%;
+        width: 85%;
         max-width: 1180px;
         div:not(:last-child) {
             margin-bottom: 18px;
@@ -223,7 +231,7 @@
             justify-content: space-between;
             .save-toggle.not-saved {
                 opacity: 0;
-                transition: opacity .1s ease-out;
+                transition: opacity 0.1s ease-out;
             }
         }
         .title {
@@ -266,6 +274,9 @@
         height: 100%;
         justify-content: center;
         text-align: center;
+        width: 85%;
+        max-width: 1180px;
+        margin-top: 80px;
         .title {
             font-family: "Noto Sans";
             font-size: 32px;
@@ -300,8 +311,8 @@
         max-width: calc(100vw - 340px);
         max-height: calc(100vh);
         .case-header .save-toggle.not-saved {
-            opacity: .6 ;
-            &:hover{
+            opacity: 0.6;
+            &:hover {
                 opacity: 1;
             }
         }
@@ -737,13 +748,6 @@
             display: flex;
             justify-content: space-between;
         }
-
-        // span {
-        //     margin: 0 6px;
-        //     &:first-child {
-        //         margin: 0 6px 0 0;
-        //     }
-        // }
     }
     .select-header {
         display: flex;
@@ -892,9 +896,12 @@
 }
 
 .recommended-cases {
-    max-width: 80%;
+    width: 85%;
     max-width: 1180px;
-    
+    .case-tag img {
+        width: 22px !important;
+        height: 22px !important;
+    }
     .rec-header {
         display: flex;
         justify-content: space-between;
@@ -904,37 +911,37 @@
         font-size: 18px;
         line-height: 23px;
     }
-    .left-arrow{
+    .left-arrow {
         width: 0;
         height: 0;
         border-top: 8px solid transparent;
         border-bottom: 8px solid transparent;
-        border-right: 8px solid rgba(51,51,51,.6);
+        border-right: 8px solid rgba(51, 51, 51, 0.6);
         margin-right: 10px !important;
         margin-top: 3px !important;
         cursor: pointer;
     }
-    
-    .right-arrow{
+
+    .right-arrow {
         width: 0;
         height: 0;
         border-top: 8px solid transparent;
         border-bottom: 8px solid transparent;
-        border-left: 8px solid rgba(51,51,51,.6);
-        
+        border-left: 8px solid rgba(51, 51, 51, 0.6);
+
         margin-top: 3px !important;
         cursor: pointer;
     }
 }
 .carousel {
-    overflow: hidden;
-    .case{
-        width: 30%;
-        // display: none;
+    margin: 0 8px;
+    .case-tag img {
+        width: 22px !important;
+        height: 22px !important;
     }
+    overflow: hidden;
     *:focus-visible,
-    &:focus-visible{
+    &:focus-visible {
         outline: none !important;
     }
-    
 }
