--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -57,8 +57,6 @@
         padding: 16px 32px;
         margin-right: 20px;
         opacity: 1;
-        width: 85%;
-        max-width: 1180px;
     }
     .cases {
         overflow-y: auto;
@@ -81,15 +79,20 @@
             color: #323232;
         }
     }
+    .case-container{
+        max-width: 80%;
+        flex-basis: 80%;
+    }
 
     .filters {
         overflow-y: auto;
         max-height: calc(100vh - 62px);
         margin-top: 20px;
-        margin-right: 30px;
-        padding-right: 15px;
+        // margin-right: 30px;
+        padding-right: 40px;
+        // min-width: 20%;
         width: 20%;
-        max-width: 320px;
+        max-width: 20%;
         padding-bottom: 30px;
         .link {
             font-size: 16px;
@@ -164,7 +167,7 @@
 
     .case {
         &.short {
-            width: 32%;
+            width: unset;
             margin: 8px 8px;
             border: 1px solid rgba(0, 0, 0, 0.12);
             padding: 16px;
@@ -221,8 +224,7 @@
         margin-right: 26px;
         padding: 18px 24px;
         border-radius: 8px;
-        width: 85%;
-        max-width: 1180px;
+
         div:not(:last-child) {
             margin-bottom: 18px;
         }
@@ -274,8 +276,6 @@
         height: 100%;
         justify-content: center;
         text-align: center;
-        width: 85%;
-        max-width: 1180px;
         margin-top: 80px;
         .title {
             font-family: "Noto Sans";
@@ -896,8 +896,8 @@
 }
 
 .recommended-cases {
-    width: 85%;
-    max-width: 1180px;
+    display: flex;
+    flex-direction: column-reverse;
     .case-tag img {
         width: 22px !important;
         height: 22px !important;
@@ -905,7 +905,8 @@
     .rec-header {
         display: flex;
         justify-content: space-between;
-        max-width: 90%;
+        // max-width: 90%;
+        width: 90%;
         margin: auto;
         margin-bottom: 8px;
         font-size: 18px;
@@ -932,16 +933,50 @@
         margin-top: 3px !important;
         cursor: pointer;
     }
-}
-.carousel {
-    margin: 0 8px;
     .case-tag img {
         width: 22px !important;
         height: 22px !important;
     }
-    overflow: hidden;
-    *:focus-visible,
-    &:focus-visible {
-        outline: none !important;
+}
+
+@media (min-width: $desktop-width) {
+    .case-discovery-search {
+        .no-cases,
+        .case,
+        .header {
+            width: 85%;
+            max-width: 1180px;
+        }
+    }
+    .recommended-cases {
+        width: 85%;
+        max-width: 1180px;
+    }
+}
+@media (max-width: 1496px) {
+    .case-discovery-search {
+        .no-cases,
+        .case,
+        .header {
+            width: 95%;
+        }
+    }
+    .recommended-cases {
+        width: 95%;
+    }
+}
+
+@media (max-width: 1280px) {
+    .case-discovery-search {
+        padding: 2.5em 0 0 20px;
+        .filters{
+            min-width: 28%;
+            width: 28%;
+            padding-right: 20px;
+        }
+        .case-container{
+            max-width: 72%;
+            flex-basis: 72%;
+        }
     }
 }
