Create basic video clip

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -876,7 +876,7 @@
     height: 30px;
     .clip-timeline{
         position: relative;
-        // background-color: #cce5ee;
+        background-color: rgba(61, 179, 227,.1);
         border-top: 1px solid #cce5ee;
         border-left: 1px solid #cce5ee;
         height: 100%;
