--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -174,6 +174,7 @@
             margin: 8px 8px;
             border: 1px solid rgba(0, 0, 0, 0.12);
             padding: 16px;
+            height: 90%;
             .short-icon {
                 margin-top: -22px !important;
                 margin-bottom: -22px !important;
