Make room for feedback

--- a/app/containers/EMMPublish/style.scss
+++ b/app/containers/EMMPublish/style.scss
@@ -1,5 +1,6 @@
 @import '../../styles/global-styles.scss';
-.emm-publish-page{
+section.emm-publish-page{
+    padding-bottom: 60px !important;
     .pad {
         padding: 0 16px;
     }
