Add bottom padding for feedback

--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -1,6 +1,7 @@
 @import 'styles/global-styles';
 .user-management-page{
     padding: 24px 40px;
+    padding-bottom: 60px;
     .add-user-button{
         margin: 0 0 10px 0;
     }
