Add margin to graph

--- a/app/components/Report/MultiTimeSeriesChart/style.scss
+++ b/app/components/Report/MultiTimeSeriesChart/style.scss
@@ -1,4 +1,7 @@
 .multi-time-series {
+    .MultiTimeSeriesChart{
+        margin-right: 40px;
+    }
     .chart-title {
         font-size: 26px;
         letter-spacing: 0;
