https://surgicalsafety.atlassian.net/browse/IPE-209 Update z-index to show above filter

--- a/app/components/UserFeedback/style.scss
+++ b/app/components/UserFeedback/style.scss
@@ -29,8 +29,8 @@
     &.open {
         padding: 16px 24px;
         width: 330px;
-        // bottom: 20px;
         height: 400px;
+        z-index: 301;
         .feedback-form {
             opacity: 1;
             height: 100%;
