--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -374,10 +374,8 @@
                 margin: 12px 0;
             }
             span {
-                margin: 0 6px;
-                &:first-child {
-                    margin: 0 6px 0 0;
-                }
+                margin: 0 12px 0 0 ;
+                white-space: nowrap;
             }
         }
 
