--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -31,6 +31,7 @@
             color: #323232;
             position: relative;
             top: 8px;
+            cursor: pointer;
         }
     }
 }
