IPE-220-Update font styling of specialty momentum items in ItemList component.

--- a/app/components/Report/ItemList/style.scss
+++ b/app/components/Report/ItemList/style.scss
@@ -29,6 +29,10 @@
       text-decoration: underline;
     }
   }
+  .normal-text {
+    font-size: 14px;
+    text-transform: uppercase;
+  }
   .title {
     opacity: 0.8;
     font-weight: bold;
