--- a/app/components/Report/ItemList/style.scss
+++ b/app/components/Report/ItemList/style.scss
@@ -31,7 +31,6 @@
   }
   .normal-text {
     font-size: 14px;
-    text-transform: uppercase;
   }
   .title {
     opacity: 0.8;
@@ -46,7 +45,8 @@
     opacity: 0.8;
     cursor: pointer;
     width: fit-content;
-    max-width: 85%;
+    // max-width: 85%;
+    max-width: 95%;
     font-weight: bold;
     margin-bottom: 0 !important;
   }
