--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -697,6 +697,15 @@
         height: 100%;
         display: flex;
         flex-direction: column;
+        .flag-select {
+            opacity: 0;
+            transform: translateY(-5%);
+            transition: opacity 1000ms, transform 500ms; 
+        }
+        .animate {
+            opacity: 1;
+            transform: translateX(0);
+        }
     }
 
     right: 0;
