--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -33,6 +33,10 @@
             top: 8px;
             cursor: pointer;
         }
+        &.disabled {
+            opacity: 0.8;
+            cursor: default;
+        }
     }
 }
 .app-wrapper section.case-discovery {
