IPE-182-Update position and layout of sumbit flag button.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -818,6 +818,8 @@
         margin-top: auto;
         align-self: baseline;
         width: 161px;
+        position: relative;
+        bottom: -40px;
     }
 
     .loader {
