IPE-182-Update hover styling of add flag button within DetailedCase component.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -32,6 +32,9 @@
             position: relative;
             top: 8px;
             cursor: pointer;
+            &:hover {
+                background-color: darken(#F4F5F7, 5);
+            }
         }
         &.disabled {
             opacity: 0.2;
