--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -826,6 +826,7 @@
         width: 161px;
     }
     .submit-flag {
+        margin-top: 2rem;
         &:disabled {
             opacity: 0.2;
             color: #fff;
