REFACTOR-IPE-182-Update handleFlagSubmit logic to updated CASES state with new flag when flag is successfully submitted.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -25,6 +25,14 @@
             background-color: #ffcfcf;
             color: #7b2d2d;
         }
+        &.flag-tag-0 {
+            // opacity: 0;
+            // transform: translateY(-5%);
+            // transition: opacity 1000ms/*, transform 500ms*/; 
+            &.animate {
+                // opacity: 1;
+            }
+        }
         &.add-flag {
             align-items: center;
             background-color: #F4F5F7;
@@ -40,6 +48,11 @@
         &.disabled {
             opacity: 0.2;
             cursor: default;
+        }
+        &.hidden {
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility .3s, opacity .3s;
         }
     }
 }
