Update styling of FlagTextInput component.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -738,6 +738,9 @@
             opacity: 1;
             transform: translateX(0);
         }
+        .flag-text-input-container {
+            margin-top: 1rem;
+        }
     }
 
     right: 0;
