Add Overview switch tabs

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -75,7 +75,7 @@
 .case-discovery-search {
     // max-width: 1198px;
     // margin: auto !important;
-    padding: 2.5em 0 0 2em;
+    padding: 0 0 0 2em;
     .header,
     .header-label {
         font-family: "Noto Sans";
@@ -1184,7 +1184,7 @@
 
 @media (max-width: 1280px) {
     .case-discovery-search {
-        padding: 2.5em 0 0 20px;
+        padding: 0 0 0 20px;
         .filters {
             min-width: 28%;
             width: 28%;
