--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1172,17 +1172,17 @@
             justify-content: space-between;
             box-shadow: inset 0 0 0 1000px rgba(0, 79, 110, 0.6);
         }
-        .empty-case {
-            border: 2px dashed rgba(0, 0, 0, 0.12);
-            cursor: unset;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: rgba(0, 0, 0, 0.4);
-            &:hover {
-                box-shadow: none;
-            }
-        }
+        // .empty-case {
+        //     border: 2px dashed rgba(0, 0, 0, 0.12);
+        //     cursor: unset;
+        //     display: flex;
+        //     justify-content: center;
+        //     align-items: center;
+        //     color: rgba(0, 0, 0, 0.4);
+        //     &:hover {
+        //         box-shadow: none;
+        //     }
+        // }
     }
     .title {
         font-weight: 700;
